       dwarvish borders with enter_hex events
   * Under the Burning Suns:
     * Keep a spawned unit from disappearing on reload in scenario 6b
     * Stunned units are now marked with a status icon.
 * Graphics:
   * Updated brown lich alternative portrait
 * Language and i18n:
   * Updated translations: British English, Chinese (Traditional), Croatian,
     French, Galician, Italian, Slovak
 * Terrains:
   * Added Unwalkable Overlay terrain (^Qov)
 * User interface:
   * Healing animations are now played when poison is cured.
   * Moving units to a selected hex field
     * Units in reach of a hex field are highlighted during selection.
     * Highlighting and labeling the selected hex field with the amount of in range units.
     * Left click on a controlled one triggers the move.
   * The recruit and recall commands are restored when right-clicking on a
     leader, but with new semantics -- only that leader's recruits/recalls will
     be presented as options.
   * Fog/shroud clearing has been reworked to be more timely and consistent.
   * The statistics window can now show per-scenario statistics.
 * WML engine:
   * The recall, recruit, prerecall, and prerecruit events will now block
     undoing unless they contain [allow_undo].
   * The cost of a recall/recruit is now paid between the prerecall/prerecruit
     and recall/recruit events. (FR #16711)
   * Sighted events should be reliable, provided the player does not activate
     delayed shroud updates (which is still a major caveat).
   * Added [effect] apply_to=overlay
   * Added [effect] apply_to=experience
   * Added [terrain_type] max_light= and min_light=.
   * Standardize weapon filters, supporting special=, [and], [or], and [not]
     wherever weapons can be filtered.
 * Miscellaneous and bug fixes:
   * Fix invalid memory access crash resulting from deleting all saved games
     in the Load Game dialog
   * Redesigned the hotkey preferences dialog