@@ -17,6 +17,8 @@ Version 1.11.0+svn:
  * Language and i18n:
    * Updated translations: British English, Chinese (Traditional), Croatian,
      French, Galician, Italian, Slovak
+ * Networking:
+   * Handle an exception in the SDL_net-based network code (bug #20205)
  * Terrains:
    * Added Unwalkable Overlay terrain (^Qov)
  * User interface:
